<resources>
    <string name="app_name">MyMciMessages</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_title">پیام های من</string>
    <string name="general">عمومی</string>
    <string name="bookmarked">ذخیره شده</string>
    <string name="empty_list">هیچ پیامی جهت نمایش موجود نیست</string>
    <string name="date_tmp">1400/10/15 - 10:50</string>
    <string name="title">عنوان پیام</string>
    <string name="lorem_ipsum">دسنترالند (Decentraland) یک فضای دیجیتال مجازی است که به دنیای فیزیکی شباهت زیادی دارد.انجام بازی های آنلاین ، معامله محصولات دیجیتال در بازارها و ارتباط با مردم از سراسر جهان در Decentraland امکان پذیر است. هر آیتم مجازی در Decentraland توسط بازیکنان کنترل می شود.توکن MANA که مربوط به Decentraland است را می توان در صرافی های اصلی مانند بایننس ، کوین بیس و … خرید و فروش کرد. همچنین از توکن MANA می توان برای ایجاد دارایی های مجازی در بلاکچین اتریوم استفاده کرد.</string>
    <string name="credit_tmp">اعتبار پیام</string>
    <string name="zero">0</string>
    <string name="delete">حذف</string>
    <string name="cancel">انصراف</string>
</resources>