<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/top_app_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/animation_root"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:animateLayoutChanges="true"
        android:background="@color/app_bar_color"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_public_messages"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/general"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_message_count"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="0dp"
            android:background="@drawable/counter_bg"
            android:gravity="center"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_public_messages"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/tv_public_messages"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toStartOf="@+id/tv_public_messages"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_bookmark_messages"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/bookmarked"
            android:textAlignment="center"
            android:textColor="@color/unselected_color"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <View
            android:id="@+id/animation_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_5sdp"
            android:background="@drawable/selected_tab_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@+id/tv_public_messages"
            app:layout_constraintWidth_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:id="@+id/nav_main_host"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_root"
        app:navGraph="@navigation/main_nav_graph" />

</androidx.constraintlayout.widget.ConstraintLayout>